# amp-hub

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  amp-hub.code-workspace
docs/: hub-deploy.md  user.md
etc/: amp-hub.env  amp-hub.service
scripts/: install.sh  make-package.sh  upgrade.sh
src/: NumberAuthorizerStd.cpp  NumberAuthorizerStd.h  main.cpp  service-thread.cpp  service-thread.h
